# pinkytoe

./: .gitignore  CMakeLists.txt  MASCOT  Makefile  README.md
examples/: CMakeLists.txt
examples/basic_term/: CMakeLists.txt
examples/basic_term/src/: enums.h  main.cpp
include/: libt3.hpp
include/deprecated/: enums.hpp
include/deprecated/detail/: board.hpp  move_ledger.hpp
include/libt3/: game.hpp
include/libt3/detail/: common.hpp  move_ledger.hpp
include/pinkytoe/: api.h  api.hpp  basic_toe.h  enums.h  move_history.h  move_ledger.h  omni.h  tic_tac_toe.h  tictactoe.h  ultimate_tictactoe.h  ultimate_toe.h
include/pinkytoe/impl/: basic_toe.hpp  enums.hpp  frame.hpp  meta.hpp  move_history.hpp  player.hpp  position.hpp  score_ledger.hpp  ultimate_toe.hpp
src/: basic_toe.cpp  frame.cpp  matrix.cpp  move_history.cpp  move_ledger.cpp  player.cpp  position.cpp  tic_tac_toe.cpp  tictactoe.cpp  ultimate_tic_tac_toe.cpp  ultimate_tictactoe.cpp  ultimate_toe.cpp
src/include/: frame.h  frame.hpp  matrix.h  meta.hpp  move_history.hpp  move_ledger.h  move_ledger.hpp  player.h  player.hpp  position.h  position.hpp  score_ledger.hpp
tests/: CMakeLists.txt  basic_toe_tests.cpp  frame_tests.cpp  libt3-test.cpp  meta_tests.cpp  move_history_tests.cpp  move_ledger_tests.cpp  player_tests.cpp  position_tests.cpp  score_ledger_tests.cpp  test_sandbox.cpp  tic_tac_toe_tests.cpp
